# Azure_Sphere_SK_ADC_RTApp

./: .gitignore  README.md
AvnetAzureSphereSK_OLED/AvnetStarterKitReferenceDesign/: AvnetStarterKitReferenceDesign.vcxproj  AvnetStarterKitReferenceDesign.vcxproj.filters  app_manifest.json  build_options.h  connection_strings.h  deviceTwin.h  device_twin.c  i2c.c  i2c.h  main.c  oled.c  oled.h  sd1306.c  sd1306.h
IntercoreCommsADC_RTApp_MT3620_BMetal/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  launch.vs.json
